--- a/css/site.css
+++ b/css/site.css
@@ -1,36 +1,34 @@
-/* we can use a single css file to style all the files in our wwebsite */
-
-/* you can pick your own background colors, text colors, and fonts */
-
-/* we can select an html element tag, in this case "body" will apply to the whole document */
 body {
-  background-color: #50808E;
+  background-color: rgb(245, 169, 179);
 }
 
-/* we can have rules apply to multiple elements at the same time with commas */
-h1,h2,h3 {
-  font-family: sans-serif;
-}
-
-/* and we can have rules that overlap other rules, both take effect */
-h1 {
-  letter-spacing: 5px;
-  word-spacing: 5px;
-  font-size: 200%;
-}
-
-/* the hashtag in a CSS selector selects an element by id, e.g., id="content" */
-#content {
+#content, .links {
+  background-color: linen;
   margin: 10px;
+  margin-top: 20px;
   padding: 10px;
-  border: solid 1px #888;
-  background-color: #84B59F;
+  padding-top: 2px;
+  border: solid 1px rgb(64, 0, 64);
 }
 
-/* the period in a CSS selector selects an element by class, e.g., class="minor-section" */
-.minor-section {
+#about {
+  background-color: whitesmoke;
+  margin-top: 10px;
   padding: 10px;
-  margin-bottom: 10px;
-  border: solid 1px #888;
-  background-color: #A3C9A8;
+  padding-top: 2px;
+}
+
+h1, h2 {
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  color: rgb(64, 0, 64);
+}
+
+h1 {
+  font-size: 200%;
+  letter-spacing: 2px;
+  word-spacing: 2px;
+}
+
+p, a {
+  font-family: Arial, Helvetica, sans-serif;
 }
