--- a/lab3/css/lab.css
+++ b/lab3/css/lab.css
@@ -5,5 +5,15 @@
     padding: 10px;
     margin-bottom: 10px;
     border: solid 1px #888;
-    background-color: #DDD8C4;
+    background-color: #f5f5f5;
   }
+
+#output img {
+  max-width: 720px;
+  max-height: 480px;
+  border: solid 1px #888;
+}
+
+.links {
+  word-spacing: 5px;
+}
