--- a/css/site.css
+++ b/css/site.css
@@ -18,7 +18,7 @@ body {
   padding-top: 2px;
 }
 
-h1, h2 {
+h1, h2, h3 {
   font-family: Georgia, 'Times New Roman', Times, serif;
   color: rgb(64, 0, 64);
 }
@@ -29,6 +29,6 @@ h1 {
   word-spacing: 2px;
 }
 
-p, a {
+p, a, li {
   font-family: Arial, Helvetica, sans-serif;
 }
