--- a/css/site.css
+++ b/css/site.css
@@ -33,6 +33,12 @@ p, a, li {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+ul {
+  background-color: whitesmoke;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
 #source-code {
   float: right;
 }
